Fixed landing/footer spacing and backgrounds
Food options, manage listings, favorites, and your listings now have color-blocked yellow pages. Fixed spacing for the footer and landing. Updated footer.

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -26,6 +26,10 @@
 .yellow {
   background-color: #FEDD36;
 }
+.footer {
+  background-color: black;
+  color: white;
+}
 .landingbg {
   background-image: url('images/black-fork-and-knife-clip-art-940302.jpg');
   background-repeat: no-repeat;
@@ -100,5 +104,7 @@
 }
 .ui.attached.inverted.menu {
   border: none;
-  margin-bottom: 10px;
+}
+.padding {
+  margin-top: 12px;
 }
